<resources>
    <string name="app_name">MenuWidget</string>
    
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    
    <string name="action_settings">설정</string>
    <string name="action_franchise">점주페이지</string>
    <string name="action_home">홈페이지</string>
    
    <string name="title_activity_login">Sign in</string>
    <string name="action_search">searching</string>
    
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions." </string>
    <string name="login_fail">로그인 실패</string>
    <string name="drawer_menu_register">회원가입</string>
    <string name="drawer_menu_login">Login</string>
    <string name="drawer_menu_logout">Logout</string>
    <string name="drawer_menu_memedit">회원 정보 수정</string>
    <string name="file_preference">Settings</string>
    <string name="error_login_fail">로그인 실패</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_blank_fragment1">이메일보내주세요</string>
    <string name="slide_1_title">Hello GiveCoffee</string>
    <string name="slide_1_desc">The easiest way to order coffee from your favourite givecoffee!</string>
    <string name="title_activity_sub_menu">SubMenuActivity</string>
    
    
    <string name="menu_size_base">Base</string>
    <string name="menu_size_sizeup">SizeUP</string>
    
    <string name="give_Poor">Poor</string>
    <string name="give_Hungry">Hungry</string>
    <string name="give_Orphan">Orphan</string>
    <string name="give_Widow">Widow</string>
    <string name="give_Street">Street</string>
    <string name="give_Misionary">Misionary</string>
    <string name="give_AfricaChildren">AfricaChildren</string>
    <string name="title_activity_app_bar_bottom">AppBarBottomActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>


</resources>
