<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             tools:context=".AppBar.AppBarMainActivity">
    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
    
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:orientation="horizontal">
    
                <ImageView
                    android:id="@+id/btn_promotion6"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/promotion6"/>
    
                <TextView
                    android:id="@+id/text_Street"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/btn_promotion6"
                    android:layout_alignLeft="@id/btn_promotion6"
                    android:layout_alignRight="@id/btn_promotion6"
                    android:layout_alignTop="@id/btn_promotion6"
                    android:gravity="center"
                    android:paddingLeft="20dp"
                    android:text="@string/give_Street"
                    android:textColor="#FFFFFF"
                    android:textSize="30dp"
                    android:textStyle="bold"
                    android:typeface="sans">
                </TextView>
            </RelativeLayout>
    
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:orientation="horizontal">
    
                <ImageView
                    android:id="@+id/btn_promotion4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/promotion4"/>
    
                <TextView
                    android:id="@+id/text_Orphan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/btn_promotion4"
                    android:layout_alignLeft="@id/btn_promotion4"
                    android:layout_alignRight="@id/btn_promotion4"
                    android:layout_alignTop="@id/btn_promotion4"
                    android:gravity="center"
                    android:paddingLeft="20dp"
                    android:text="@string/give_Orphan"
                    android:textColor="#FFFFFF"
                    android:textSize="30dp"
                    android:textStyle="bold"
                    android:typeface="sans">
                </TextView>

            </RelativeLayout>
    
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:orientation="horizontal">
    
                <ImageView
                    android:id="@+id/btn_promotion5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/promotion5"/>
    
                <TextView
                    android:id="@+id/text_Widow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/btn_promotion5"
                    android:layout_alignLeft="@id/btn_promotion5"
                    android:layout_alignRight="@id/btn_promotion5"
                    android:layout_alignTop="@id/btn_promotion5"
                    android:gravity="center"
                    android:paddingLeft="20dp"
                    android:text="@string/give_Widow"
                    android:textColor="#FFFFFF"
                    android:textSize="30dp"
                    android:textStyle="bold"
                    android:typeface="sans">
                </TextView>

            </RelativeLayout>
    
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:orientation="horizontal">
    
                <ImageView
                    android:id="@+id/btn_promotion7"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/promotion7"/>
    
                <TextView
                    android:id="@+id/text_Misionary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/btn_promotion7"
                    android:layout_alignLeft="@id/btn_promotion7"
                    android:layout_alignRight="@id/btn_promotion7"
                    android:layout_alignTop="@id/btn_promotion7"
                    android:gravity="center"
                    android:paddingLeft="20dp"
                    android:text="@string/give_Misionary"
                    android:textColor="#FFFFFF"
                    android:textSize="30dp"
                    android:textStyle="bold"
                    android:typeface="sans">
                </TextView>
            </RelativeLayout>
    
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:layout_marginTop="2dp"
                android:orientation="horizontal">
    
                <ImageView
                    android:id="@+id/btn_promotion8"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/promotion8"/>
    
                <TextView
                    android:id="@+id/text_AfricaChildren"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/btn_promotion8"
                    android:layout_alignLeft="@id/btn_promotion8"
                    android:layout_alignRight="@id/btn_promotion8"
                    android:layout_alignTop="@id/btn_promotion8"
                    android:gravity="center"
                    android:paddingLeft="20dp"
                    android:text="@string/give_AfricaChildren"
                    android:textColor="#FFFFFF"
                    android:textSize="30dp"
                    android:textStyle="bold"
                    android:typeface="sans">
                </TextView>
            </RelativeLayout>
    
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:orientation="horizontal">
    
                <ImageView
                    android:id="@+id/btn_promotion2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/promotion2"/>
    
                <TextView
                    android:id="@+id/text_Poor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/btn_promotion2"
                    android:layout_alignLeft="@id/btn_promotion2"
                    android:layout_alignRight="@id/btn_promotion2"
                    android:layout_alignTop="@id/btn_promotion2"
                    android:gravity="center"
                    android:paddingLeft="20dp"
                    android:text="@string/give_Poor"
                    android:textColor="#FFFFFF"
                    android:textSize="30dp"
                    android:textStyle="bold"
                    android:typeface="sans">
                </TextView>

            </RelativeLayout>
            
            
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:orientation="horizontal">
    
                <ImageView
                    android:id="@+id/btn_promotion3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/promotion3"/>
    
                <TextView
                    android:id="@+id/text_Hungry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/btn_promotion3"
                    android:layout_alignLeft="@id/btn_promotion3"
                    android:layout_alignRight="@id/btn_promotion3"
                    android:layout_alignTop="@id/btn_promotion3"
                    android:gravity="center"
                    android:paddingLeft="20dp"
                    android:text="@string/give_Hungry"
                    android:textColor="#FFFFFF"
                    android:textSize="30dp"
                    android:textStyle="bold"
                    android:typeface="sans">
                </TextView>

            </RelativeLayout>
    
            
            
            
            
            
            
            
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:orientation="horizontal">
        
                <ImageView
                    android:id="@+id/btn_promotion66"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/promotion9"/>
        
                <TextView
                    android:id="@+id/text_Street6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/btn_promotion66"
                    android:layout_alignLeft="@id/btn_promotion66"
                    android:layout_alignRight="@id/btn_promotion66"
                    android:layout_alignTop="@id/btn_promotion66"
                    android:gravity="center"
                    android:paddingLeft="20dp"
                    android:text="@string/give_Street"
                    android:textColor="#FFFFFF"
                    android:textSize="30dp"
                    android:textStyle="bold"
                    android:typeface="sans">
                </TextView>
            </RelativeLayout>
    
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:orientation="horizontal">
        
                <ImageView
                    android:id="@+id/btn_promotion44"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/promotion10"/>
        
                <TextView
                    android:id="@+id/text_Orphan4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/btn_promotion44"
                    android:layout_alignLeft="@id/btn_promotion44"
                    android:layout_alignRight="@id/btn_promotion44"
                    android:layout_alignTop="@id/btn_promotion44"
                    android:gravity="center"
                    android:paddingLeft="20dp"
                    android:text="@string/give_Orphan"
                    android:textColor="#FFFFFF"
                    android:textSize="30dp"
                    android:textStyle="bold"
                    android:typeface="sans">
                </TextView>
    
            </RelativeLayout>
    
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:orientation="horizontal">
        
                <ImageView
                    android:id="@+id/btn_promotion55"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/promotion1"/>
        
                <TextView
                    android:id="@+id/text_Widow5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/btn_promotion55"
                    android:layout_alignLeft="@id/btn_promotion55"
                    android:layout_alignRight="@id/btn_promotion55"
                    android:layout_alignTop="@id/btn_promotion55"
                    android:gravity="center"
                    android:paddingLeft="20dp"
                    android:text="@string/give_Widow"
                    android:textColor="#FFFFFF"
                    android:textSize="30dp"
                    android:textStyle="bold"
                    android:typeface="sans">
                </TextView>
    
            </RelativeLayout>
    
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:orientation="horizontal">
        
                <ImageView
                    android:id="@+id/btn_promotion77"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/promotion2"/>
        
                <TextView
                    android:id="@+id/text_Misionary7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/btn_promotion77"
                    android:layout_alignLeft="@id/btn_promotion77"
                    android:layout_alignRight="@id/btn_promotion77"
                    android:layout_alignTop="@id/btn_promotion77"
                    android:gravity="center"
                    android:paddingLeft="20dp"
                    android:text="@string/give_Misionary"
                    android:textColor="#FFFFFF"
                    android:textSize="30dp"
                    android:textStyle="bold"
                    android:typeface="sans">
                </TextView>
            </RelativeLayout>
    
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:layout_marginTop="2dp"
                android:orientation="horizontal">
        
                <ImageView
                    android:id="@+id/btn_promotion88"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/promotion3"/>
        
                <TextView
                    android:id="@+id/text_AfricaChildren8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/btn_promotion88"
                    android:layout_alignLeft="@id/btn_promotion88"
                    android:layout_alignRight="@id/btn_promotion88"
                    android:layout_alignTop="@id/btn_promotion88"
                    android:gravity="center"
                    android:paddingLeft="20dp"
                    android:text="@string/give_AfricaChildren"
                    android:textColor="#FFFFFF"
                    android:textSize="30dp"
                    android:textStyle="bold"
                    android:typeface="sans">
                </TextView>
            </RelativeLayout>
    
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:orientation="horizontal">
        
                <ImageView
                    android:id="@+id/btn_promotion22"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/promotion4"/>
        
                <TextView
                    android:id="@+id/text_Poor2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/btn_promotion22"
                    android:layout_alignLeft="@id/btn_promotion22"
                    android:layout_alignRight="@id/btn_promotion22"
                    android:layout_alignTop="@id/btn_promotion22"
                    android:gravity="center"
                    android:paddingLeft="20dp"
                    android:text="@string/give_Poor"
                    android:textColor="#FFFFFF"
                    android:textSize="30dp"
                    android:textStyle="bold"
                    android:typeface="sans">
                </TextView>
    
            </RelativeLayout>
    
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:orientation="horizontal">
        
                <ImageView
                    android:id="@+id/btn_promotion33"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/promotion5"/>
        
                <TextView
                    android:id="@+id/text_Hungry3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/btn_promotion33"
                    android:layout_alignLeft="@id/btn_promotion33"
                    android:layout_alignRight="@id/btn_promotion33"
                    android:layout_alignTop="@id/btn_promotion33"
                    android:gravity="center"
                    android:paddingLeft="20dp"
                    android:text="@string/give_Hungry"
                    android:textColor="#FFFFFF"
                    android:textSize="30dp"
                    android:textStyle="bold"
                    android:typeface="sans">
                </TextView>
    
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</FrameLayout>
